Changes for 1.5.2
* Fixed bug where sea placement could be done in territories captured this turn. (veqryn)

* Fixed bug with bid placement of sea units, which was previously not allowing them to be placed anywhere at all. (veqryn)

* Changed Battle Calculator to only count units that can die in combat, in the unit totals. No longer counts AA Guns or other units like Factories, in the unit totals, even if they are present. (veqryn)

* Fixed infinite loop in Dynamix combat calculation routine, resulting from thinking battles that were lost were really won, then increasing the number of defenders to try to reach a "losing" battle, except that no losing battle ever came. (veqryn)

* Preventing Dyanmix AI from purchasing any infrastructure or maxBuiltPerPlayer units. (veqryn)

* Reduced calls to find map resource paths to a single time, when the map is first loaded. Should speed things up a little. (veqryn)

* Fixed TripleA to ignore if the user has multiple folders with the same name in both of the "maps" directories that it reads from. TripleA will pick first from the user's maps folder, and pick second from the program's folder. (veqryn)

* Fixed failing unit tests. (veqryn)

* Fixed bug where if a defender wins a battle in a seazone, but has aircraft that can not land anymore, the aircraft had to choose right away where they wanted to land, forbidding landing in a territory with a pending battle. 
  Now fixed so that all these air wait til end of battle phase to ask where to move. (veqryn) 

* Fixed bug where aircraft + destroyer attacking a submarine, if the submarine kills the destroyer, the submarine may not yet submerge but should be allowed to submerge. (veqryn)

* Fixed bug where if the defender only has subs left, and submerges them, the attacker can still retreat, but should not be able to. (veqryn)
